<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BBq-sM-25y">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Counter-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="counter" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="div-a2-GcA">
                                <rect key="frame" x="16" y="80" width="343" height="304.5"/>
                                <subviews>
                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="diR-g8-mtv">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="125"/>
                                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="display"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="125" id="HgV-P2-jdn"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="76"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                        <color key="shadowColor" white="0.33333333329999998" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <size key="shadowOffset" width="0.0" height="1"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="n1d-Y9-AQE">
                                        <rect key="frame" x="0.0" y="141" width="343" height="163.5"/>
                                        <subviews>
                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OqJ-VX-Fbd">
                                                <rect key="frame" x="0.0" y="0.0" width="163.5" height="163.5"/>
                                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="minusButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="OqJ-VX-Fbd" secondAttribute="height" multiplier="1:1" id="mAR-jg-yx6"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                                <size key="titleShadowOffset" width="0.0" height="1"/>
                                                <state key="normal" title="-1">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" white="0.33333333333333331" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="countButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xuk-yW-eHU"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEf-Sg-WFX">
                                                <rect key="frame" x="179.5" y="0.0" width="163.5" height="163.5"/>
                                                <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                                <size key="titleShadowOffset" width="0.0" height="1"/>
                                                <state key="normal" title="+1">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" white="0.33333333329999998" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="countButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oEW-eH-wj0"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="wEf-Sg-WFX" firstAttribute="width" secondItem="OqJ-VX-Fbd" secondAttribute="height" multiplier="1:1" id="TRa-jm-g72"/>
                                            <constraint firstItem="wEf-Sg-WFX" firstAttribute="width" secondItem="OqJ-VX-Fbd" secondAttribute="width" id="Vho-A0-Oc4"/>
                                            <constraint firstItem="wEf-Sg-WFX" firstAttribute="height" secondItem="OqJ-VX-Fbd" secondAttribute="height" id="zsg-ft-Ohy"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgM-Qp-cAF">
                                <rect key="frame" x="0.0" y="601" width="375" height="66"/>
                                <subviews>
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sl9-Lk-fwi">
                                        <rect key="frame" x="22" y="18" width="71" height="33"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="resetButton"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <state key="normal" title="Reset">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="resetButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eV9-4l-BH8"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="unh-Sw-4VP">
                                        <rect key="frame" x="293" y="19" width="71" height="32"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <state key="normal" title="About">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="0.68038313356164382" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="66" id="tWC-tT-mQz"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="div-a2-GcA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Irn-GI-gHT"/>
                            <constraint firstItem="OgM-Qp-cAF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lad-Xy-vb3"/>
                            <constraint firstItem="OgM-Qp-cAF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="em0-qm-dk0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="div-a2-GcA" secondAttribute="trailing" constant="16" id="gzj-bs-kjv"/>
                            <constraint firstItem="div-a2-GcA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="lml-Jn-b1I"/>
                            <constraint firstItem="OgM-Qp-cAF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rNq-KQ-Jzv"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Counter" id="5CZ-Wd-7OF"/>
                    <connections>
                        <outlet property="aboutButton" destination="unh-Sw-4VP" id="sbA-J0-h2V"/>
                        <outlet property="counterLabel" destination="diR-g8-mtv" id="mhb-MF-fiT"/>
                        <outlet property="decrementButton" destination="OqJ-VX-Fbd" id="cm8-gZ-m3C"/>
                        <outlet property="incrementButton" destination="wEf-Sg-WFX" id="xhi-SD-KQF"/>
                        <outlet property="resetButton" destination="Sl9-Lk-fwi" id="van-Kq-1f0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1028" y="-665.21739130434787"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="qkq-5h-5Zc">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BBq-sM-25y" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3BG-Qk-SUm">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="aSf-i0-YKP"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="tPJ-Pj-YgI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="181.59999999999999" y="-665.21739130434787"/>
        </scene>
    </scenes>
</document>
