...
        }
    }
    
    @IBAction func resetButtonPressed(_ sender: Any) {
        
        let alertController = UIAlertController(title: "Reset", message: "Are you sure you want to reset the counter to zero?", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "No", style: .default, handler: nil))
        alertController.addAction(UIAlertAction(title: "Yes", style: .default, handler: { _ in
            self.changeCount(action: .reset)
        }))
        present(alertController, animated: true, completion: nil)

    }
    
...
